--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,6 @@
 [submodule ".haxelib/tink_core/git"]
 	path = .haxelib/tink_core/git
 	url = https://github.com/haxetink/tink_core.git
+[submodule ".haxelib/utest/git"]
+	path = .haxelib/utest/git
+	url = https://github.com/haxe-utest/utest.git
