--- a/.gitmodules
+++ b/.gitmodules
@@ -36,7 +36,7 @@
 	path = .haxelib/utest/git
 	url = https://github.com/haxe-utest/utest.git
 [submodule ".haxelib/feathersui-openfl/git"]
-	path = .haxelib/feathersui-openfl.git
+	path = .haxelib/feathersui-openfl/git
 	url = https://github.com/BowlerHatLLC/feathersui-openfl.git
 [submodule "openfl"]
 	shallow = true
