--- a/.gitmodules
+++ b/.gitmodules
@@ -82,5 +82,5 @@
 	path = .haxelib/haxeui-html5/git
 	url = https://github.com/haxeui/haxeui-html5.git
 [submodule ".haxelib/peteshand/git"]
-	path = .haxelib/peteshand/git
+	path = .haxelib/signals/git
 	url = https://github.com/peteshand/signals.git
